tests/invalid-real-constant/out.txt
error: invalid real constant: invalid float literal
  ┌─ err.sml:1:9
  │
1 │ val _ = 123.
  │         ^^^^

lexing failed
